# SoundCardChooser

./: .gitignore  README.md  settings.gradle  个人心得
app/: build.gradle  readme
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JNICallbackHelper.cpp  JNICallbackHelper.h  Player.cpp  Player.h  SoundPlayStrategy.h  SoundPlayStrategy7L.cpp  SoundPlayStrategy7L.h  SoundPlayStrategy8L.cpp  SoundPlayStrategy8L.h  SoundPlayStrategy8L7L.cpp  SoundPlayStrategyFactory.cpp  SoundPlayStrategyFactory.h  log4c.h  native-lib.cpp  pcm.c  tinymix.c  util.h
app/src/main/cpp/player/: JNICallbackHelper.cpp  JNICallbackHelper.h  Player.cpp  Player.h  consts.h
app/src/main/cpp/player/sound_play_strategy/factory/: SoundPlayStrategyFactory.h
app/src/main/cpp/player/sound_play_strategy/strategy/: SoundPlayStrategy.h  SoundPlayStrategy7L.cpp  SoundPlayStrategy8L.cpp  SoundPlayStrategy8L7L.cpp  SoundPlayStrategy8L7L.h
app/src/main/cpp/tinyalsa/: pcm.c
app/src/main/java/com/rdd/player/: IJump.java  (+3 more)
app/src/main/res/layout/: activity_main.xml  activity_target.xml
gradle/wrapper/: gradle-wrapper.properties
player/: build.gradle  readme
player/src/main/: AndroidManifest.xml
player/src/main/cpp/: CMakeLists.txt  native-lib.cpp
player/src/main/cpp/player/: JNICallbackHelper.cpp  JNICallbackHelper.h  Player.cpp  Player.h  consts.h
player/src/main/cpp/player/sound_play_strategy/factory/: SoundPlayStrategyFactory.cpp  SoundPlayStrategyFactory.h
player/src/main/cpp/player/sound_play_strategy/strategy/: SoundPlayStrategy.h  SoundPlayStrategy7L.cpp  SoundPlayStrategy7L.h  SoundPlayStrategy8L.cpp  SoundPlayStrategy8L.h  SoundPlayStrategy8L7L.cpp  SoundPlayStrategy8L7L.h
player/src/main/cpp/tinyalsa/: asoundlib.h  mixer.c  pcm.c  tinymix.c
player/src/main/cpp/utils/: log4c.h
player/src/main/res/values/: strings.xml  themes.xml
player/src/main/res/values-night/: themes.xml
playeruser2/: build.gradle
playeruser2/libs/: player.aar
playeruser2/src/main/: AndroidManifest.xml
playeruser2/src/main/res/layout/: activity_main.xml  activity_pre.xml
playeruser2/src/main/res/values/: strings.xml
tinyalsa源码/: 命令行使用tinyalsa
(+17 files in other folders)
